playground/notas_tests/invalid/syn-if-elseif.hulk
if (true) 1 elseif (false) 2;
